# JustAsBUffer

./: 240910.pptx  240924.pptx  CMakeLists.txt  LICENSE  Test.txt  _a  a.c  a.md  a.out  a.py
sqlite/: Makefile  config.status  lemon  libtool  manifest  mkkeywordhash  mksourceid  sqlite3.pc  sqlite_cfg.h  src-verify
sqlite/tsrc/: fts5.c  sqlite3.h
src/: main.cpp
